<resources>

    <string name="led">LED</string>
    <string name="balcony">Балкон</string>
    <string name="fan">Вентилятор</string>
    <string name="auto">Автоматика</string>
    <string name="backlight">Подсветка</string>
    <string name="save">Сохранить</string>

    <!-- Navigation bar titles -->
    <string name="tab_1">Главная</string>
    <string name="tab_2">Счетчики</string>
    <string name="tab_3">Сценарии</string>
    <string name="tab_4">Настройки</string>

    <!-- Main dashboard -->
    <string name="app_name">Smart Home Dashboard</string>
    <string name="image_description">image</string>
    <string name="dashboard_caption_bedroom">Спальня</string>
    <string name="dashboard_caption_children_room">Детская</string>
    <string name="dashboard_caption_hall">Гостиная</string>
    <string name="dashboard_caption_kitchen">Кухня</string>
    <string name="dashboard_caption_balcony_large">Балкон большой</string>
    <string name="dashboard_caption_balcony_small">Балкон маленький</string>
    <string name="dashboard_caption_wc">Санузел</string>
    <string name="dashboard_caption_entrance">Прихожая</string>
    <string name="dashboard_caption_corridor">Корридор</string>
    <string name="dashboard_caption_tuya">Tuya_Test</string>
    <string name="text_degree">°С</string>
    <string name="text_percent">%</string>
    <string name="text_dummy">-255</string>

    <!-- Meters screen -->
    <string name="meters_head">Счетчики</string>
    <string name="meter_water_hot">Горячая вода</string>
    <string name="meter_water_cold">Холодная вода</string>
    <string name="meter_electric">Электроэнергия</string>
    <string name="meter_electric_t1">Т1 пик</string>
    <string name="meter_electric_t1_period">7:00–10:00, 17:00–21:00</string>
    <string name="meter_electric_t2">Т2 ночь</string>
    <string name="meter_electric_t2_period">23:00–7:00</string>
    <string name="meter_electric_t3">Т3 полупик</string>
    <string name="meter_electric_t3_period">10:00–17:00, 21:00–23:00</string>
    <string name="value_m3">м<sup><small>3</small></sup></string>
    <string name="value_kW">кВт</string>

    <!-- Scenario screen -->
    <string name="scenario_head">Сценарии</string>
    <string name="scenario_add_new_button">+ Добавить новый сценарий</string>
    <string name="scenario_add_new_head_text">Создание нового сценария</string>
    <string name="scenario_add_new_text_name">Наименование:</string>
    <string name="scenario_add_new_text_actions">Последовательность действий</string>
    <string name="scenario_add_new_text_sources">Источник</string>

    <!-- Settings screen -->
    <string name="settings_head">Настройки</string>
    <string name="settings_caption_bedroom">Спальня</string>
    <string name="settings_caption_children_room">Детская</string>
    <string name="settings_caption_hall">Гостиная</string>
    <string name="settings_caption_kitchen">Кухня</string>
    <string name="settings_caption_wc">Санузел</string>
    <string name="settings_caption_balcony">Балкон большой</string>
    <string name="settings_caption_meters">Корректировка показаний счетчиков</string>
    <string name="settings_main_light">Основное</string>
    <string name="settings_wall_left">Бра левый</string>
    <string name="settings_wall_right">Бра правый</string>
    <string name="settings_hall_wall">Бра на стене</string>
    <string name="settings_hall_sofa">Бра за диваном</string>
    <string name="settings_in_window">В окне</string>
    <string name="settings_kitchen_table">Над столом</string>
    <string name="settings_corridor_bad">у спальни</string>
    <string name="settings_corridor_children">у детской</string>
    <string name="settings_corridor_entrance">у прихожей</string>
    <string name="settings_corridor_hall">у гостиной</string>
    <string name="settings_warm_floor">Теплый пол</string>
    <string name="settings_meters_hot_water">Горячая вода</string>
    <string name="settings_meters_cold_water">Холодная вода</string>
    <string name="settings_dimming">Диммируемость</string>
    <string name="settings_temperature">Температура</string>
    <string name="settings_button_tag_increase">increase</string>
    <string name="settings_button_tag_decrease">decrease</string>

    <!-- Next for AppUpdate library -->
    <string name="app_updater_start_notification_title">"Version Update "</string>
    <string name="app_updater_start_notification_content">"Getting download data… "</string>
    <string name="app_updater_progress_notification_title">"Version Update "</string>
    <string name="app_updater_progress_notification_content">Downloading … </string>
    <string name="app_updater_finish_notification_title">"Download complete "</string>
    <string name="app_updater_finish_notification_content">Ready to install </string>
    <string name="app_updater_error_notification_title">"Download failed "</string>
    <string name="app_updater_error_notification_content">Tap to close notification </string>
    <string name="app_updater_error_notification_content_re_download">Click to redownload </string>
    <string name="app_updater_permission_dialog_header">Location permission request</string>
    <string name="app_updater_permission_dialog_message">Location permission is needed to receive current WiFi name and proper communicate with Home controller</string>
    <string name="app_updater_permission_canceled_dialog_header">Location permission request</string>
    <string name="app_updater_permission_canceled_dialog_message">Please specify the location permission manually and restart the app. This permission allows to check proper connection to home network and establishing connection to the home server</string>

    <!-- Strings for CreateWebSocket class-->
    <string name="websocket_error">Something wrong with connection to server</string>
    <string name="websocket_not_home_network">You are not in home network. Control is not possible</string>
    <string name="websocket_no_connection_to_server">Waiting for connection to server</string>
</resources>