<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scenario_add_new_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/spacing_small">

    <ImageView
        android:id="@+id/scenario_add_new_button_image"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:contentDescription="@string/image_description"
        android:src="@drawable/bulb" />

    <TextView
        android:id="@+id/scenario_add_new_button_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_caption_hall" />

    <TextView
        android:id="@+id/scenario_add_new_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_main_light" />
</LinearLayout>