<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/dashboard_caption_kitchen"
        android:textSize="@dimen/text_size" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@id/temp_kitchen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/text_dummy"
            android:textColor="@color/text_low"
            android:textSize="@dimen/text_size_low" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/text_degree"
            android:textColor="@color/text_low"
            android:textSize="@dimen/text_size_low" />

        <TextView
            android:id="@id/hum_kitchen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/text_dummy"
            android:textColor="@color/text_low"
            android:textSize="@dimen/text_size_low" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/text_percent"
            android:textColor="@color/text_low"
            android:textSize="@dimen/text_size_low" />

    </LinearLayout>

</LinearLayout>