<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/button_with_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_small"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:contentDescription="@string/image_description"
        android:src="@drawable/wf" />

    <LinearLayout
        android:id="@+id/temp_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_margin">

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/text_dummy"
            android:textColor="@color/text_low"
            android:textSize="@dimen/text_size_lower" />

        <TextView
            android:id="@+id/temp_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/text_degree"
            android:textColor="@color/text_low"
            android:textSize="@dimen/text_size_lower" />
    </LinearLayout>
</RelativeLayout>
