<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".fragment.ScenarioAddNew">

    <androidx.core.widget.NestedScrollView
        android:id="@id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/spacing_middle"
                android:text="@string/scenario_add_new_head_text"
                android:textSize="@dimen/text_caption"
                android:typeface="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/scenario_add_new_text_name"
                    android:textSize="@dimen/text_size" />

                <Button
                    android:id="@+id/scenario_add_new_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/save" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/scenario_new_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/scenario_add_new_text_actions"
                android:textSize="@dimen/text_size" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/scenario_new_actions_grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/scenario_add_new_text_sources"
                android:textSize="@dimen/text_size" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/scenario_new_sources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>