<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_xlarge"
    android:theme="@style/Theme.MaterialComponents.DayNight">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_toStartOf="@+id/correction_block"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settings_element_meters_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/text_item"
            android:textSize="@dimen/text_size_low" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/correction_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:gravity="end|center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/spacing_middle">

        <ImageButton
            android:id="@+id/settings_element_meters_decrease"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_remove"
            android:tag="@string/settings_button_tag_decrease"
            android:tint="@color/text_low"
            tools:ignore="UseAppTint" />

        <TextView
            android:id="@+id/settings_element_meters_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_middle"
            android:layout_marginRight="@dimen/spacing_middle"
            android:gravity="center_vertical"
            android:text="@string/text_dummy"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/text_low"
            android:textSize="@dimen/text_size"
            app:fontFamily="sans-serif-medium" />

        <ImageView
            android:id="@+id/settings_element_meters_increase"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_add"
            android:tag="@string/settings_button_tag_increase"
            android:tint="@color/text_low"
            tools:ignore="UseAppTint" />

    </LinearLayout>

</RelativeLayout>
