<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:strokeWidth="1px"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/spacing_large"
            android:background="@color/background_button_auto"
            android:gravity="center">

            <ImageView
                android:id="@+id/head_image"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_small"
                android:contentDescription="@string/image_description"/>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/head_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="@dimen/text_size" />


            <LinearLayout
                android:id="@+id/climate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/text_dummy"
                    android:textColor="@color/text_low"
                    android:textSize="@dimen/text_size_low" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/text_degree"
                    android:textColor="@color/text_low"
                    android:textSize="@dimen/text_size_low" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/text_dummy"
                    android:textColor="@color/text_low"
                    android:textSize="@dimen/text_size_low" />

                <TextView
                    android:id="@+id/humidity_mark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/text_percent"
                    android:textColor="@color/text_low"
                    android:textSize="@dimen/text_size_low" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center"
        android:orientation="horizontal">

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
